# virtuals-python

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  codecov.yaml  mkdocs.yml  pyproject.toml
.devcontainer/: postCreateCommand.sh
.github/actions/setup-python-env/: action.yml
docs/: index.md
docs/api/core/: agent.md  game.md  sdk.md
docs/api/functions/: discord.md  telegram.md
examples/: example-custom.py  example-twitter.py
src/virtuals_sdk/: __init__.py  game.py  sdk.py
src/virtuals_sdk/functions/: __init__.py  discord.py  telegram.py
tests/e2e/: test_health.py
tests/unit/: test_health.py
